--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,39 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>sportest Authentication Server</title>
-  </head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./img/Favicon/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="./img/Favicon/favicon.ico" type="image/x-icon" />
+    <meta
+      name="google-signin-client_id"
+      content="545491340068-hb3lse39ve85bsgsoatc53luofqs6vb7.apps.googleusercontent.com"
+    />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+    <title>sportest</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+    />
+  </head>
   <body>
-    <h1>sportest Authentication Server</h1>
-    <p>Welcome to Express</p>
+    <noscript>
+      <strong
+        >We're sorry but sportest doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
