--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="./img/Favicon/favicon.ico"
-      type="image/x-icon"
-    />
-    <link rel="icon" href="./img/Favicon/favicon.ico" type="image/x-icon" />
-    <meta
-      name="google-signin-client_id"
-      content="545491340068-hb3lse39ve85bsgsoatc53luofqs6vb7.apps.googleusercontent.com"
-    />
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
-    <title>sportest</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but sportest doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" href=./img/Favicon/favicon.ico type=image/x-icon><!--[if IE]><link rel="icon" href="./img/Favicon/favicon.ico" type="image/x-icon" /><![endif]--><meta name=google-signin-client_id content=545491340068-hb3lse39ve85bsgsoatc53luofqs6vb7.apps.googleusercontent.com><script src=https://apis.google.com/js/platform.js async defer></script><title>sportest</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=/css/app.82fdbba6.css rel=preload as=style><link href=/css/chunk-vendors.a065ce56.css rel=preload as=style><link href=/js/app.e77b6ab8.js rel=preload as=script><link href=/js/chunk-vendors.4fcb2359.js rel=preload as=script><link href=/css/chunk-vendors.a065ce56.css rel=stylesheet><link href=/css/app.82fdbba6.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/img/icons/favicon-16x16.png><link rel=manifest href=/manifest.json><meta name=theme-color content=#4DBA87><meta name=apple-mobile-web-app-capable content=no><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content=sportest><link rel=apple-touch-icon href=/img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=/img/icons/safari-pinned-tab.svg color=#4DBA87><meta name=msapplication-TileImage content=/img/icons/msapplication-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><noscript><strong>We're sorry but sportest doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.4fcb2359.js></script><script src=/js/app.e77b6ab8.js></script></body></html>
